<resources>
    <string name="app_name">QuickSpot</string>

    <string name="usuario_hint">Correo electrónico</string>
    <string name="usuario_helper">Introduce el correo asociado a la cuenta</string>
    <string name="password_hint">Contraseña</string>
    <string name="name_hint">Nombre de usuario</string>
    <string name="confirm_pass_hint">Confirmar contraseña</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="phone_hint">Número de teléfono  *opcional</string>


    
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">He olvidado mi contraseña</string>
    <string name="google_login">Continuar con Google</string>
    <string name="not_registered">¿No estás registrado?</string>
    <string name="register">Registrarse</string>
    <string name="create_account">Crear cuenta</string>


    <string name="active_reservations">Reservas activas</string>
    <string name="add_reservation">Añadir reserva</string>
    <string name="settings">Ajustes</string>
    <string name="booking_history">Historial de reservas</string>
    <string name="date">Fecha</string>
    <string name="time">Hora</string>
    <string name="spot">Plaza</string>
    <string name="vehicle">Vehículo</string>


    <string name="selectDate">Selecciona una fecha</string>

    <string name="fragment_main">Main</string>
    <string name="fragment_add_booking">Añadir Reserva</string>
    <string name="fragment_step1">Step 1</string>
    <string name="fragment_step2">Step 2</string>
    <string name="fragment_end">End</string>
    <string name="buscar">Buscar plazas libres</string>

    <string name="add">Añadir</string>
    <string name="more">Ver más</string>

    <string name="profile_info_name">Nombre</string>
    <string name="profile_info_email">Correo electrónico</string>
    <string name="profile_info_phone_number">Número de teléfono</string>
    
    <string name="booking_statistics">Estadísticas de reserva</string>
    <string name="car">Coche</string>
    <string name="motorcycle">Moto</string>
    <string name="electric">Eléctrico</string>
    <string name="special">Discapacitado</string>
    <string name="total">Total</string>

    <string name="terms">He leído y acepto los términos
        de uso de QuickSpot</string>
    <string name="accept_terms">Por favor acepta los términos de uso</string>

    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">X</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>

    <string name="add_booking">Añadir reserva</string>
    <string name="booking_type">Tipo de plaza</string>
    <string name="booking_date">Fecha</string>
    <string name="booking_time">Hora</string>
    <string name="booking_spot">Plaza</string>
    <string name="no_booking_spot">Selecciona una reserva válida</string>

    <string name="dialog_close">Cerrar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel_booking">¿Cancelar reserva?</string>
    <string name="dialog_cancel_booking_message">Se borrarán todos los datos correspondientes a la reserva</string>

    <string name="no_active_bookings">Sin reservas activas</string>
    <string name="no_passed_bookings">Sin reservas pasadas</string>
    <string name="edit_booking">Editar Reserva</string>

    <string name="confirm_email">Confirmar correo</string>
    <string name="email_sent">Hemos enviado un correo de verificación a tu correo electrónico</string>
    <string name="click_button">Haz click en el enlace de verificación del correo</string>
    <string name="accept">Aceptar</string>
    <string name="remember_spam">Si no lo encuentras en tu bandeja de entrada, recuerda revisar la carpeta de spam o de correo no deseado</string>

    <string name="password_recovery">Recuperar constraseña</string>
    <string name="password_recovery_message">No te preocupes, te enviaremos un correo para cambiar la contraseña</string>

    <string name="google_client_id">298070462578-4fbr1vkdb67o6ubujl9fim7o9afm5s80.apps.googleusercontent.com></string>
    <string name="logout">¿Cerrar sesión?</string>
    <string name="logout_message">Se cerrará la sesión de usuario actual</string>



</resources>