<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity">



        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="57sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/TextInputStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:hint="@string/usuario_hint"
            android:inputType="text"
            app:helperText="@string/usuario_helper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/TextInputStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/heading"
            style="@style/LoginHeadingStyle"
            android:text="@string/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            style="@style/PrimaryButton"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/forgotPassButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/robotobold"
            android:text="@string/forgot_password"
            android:layout_marginTop="5dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleButton"
            android:fontFamily="@font/robotobold"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:backgroundTint="?attr/colorSecondaryContainer"
            android:layout_marginTop="60dp"
            android:paddingBottom="12sp"
            android:paddingTop="12sp"
            android:paddingLeft="52sp"
            android:paddingRight="52sp"
            android:textSize="18sp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:text="@string/google_login"
            android:drawableLeft="@drawable/googleicon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassButton" />

        <TextView
            android:id="@+id/notRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="@font/robotobold"
            android:text="@string/not_registered"
            android:layout_marginTop="60dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccount"
            style="@style/PrimaryButton"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notRegistered" />



</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
