<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:minHeight="600dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintVertical_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                style="@style/iconoAtrasConstrainted"
                android:id="@+id/returning"
                android:src="@drawable/iconoactras" />

            <TextView
                android:id="@+id/title"
                style="@style/HeadingFlechaStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/confirm_email" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/confirm_email"
            app:tint="@color/color_icons"

            app:layout_constraintVertical_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <TextView
                android:id="@+id/email_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/email_sent"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"

                >
            </TextView>
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/click_button"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >
            </TextView>
            <TextView
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSurfaceVariant"
                android:text="@string/remember_spam"
                android:layout_marginTop="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                >
            </TextView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aceptar_button"
            style="@style/PrimaryButton"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_marginTop="100dp"

            app:layout_constraintVertical_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
